feat: Specify package manager

--- a/action.yml
+++ b/action.yml
@@ -28,6 +28,9 @@ inputs:
   install-command:
     description: 'Command to install dependencies'
     default: 'npm ci'
+  package-manager:
+    description: 'Package manager to use for caching (npm, pnpm, yarn, or none to disable caching)'
+    default: 'npm'
   build-env:
     description: 'JSON object of environment variables for build step'
     required: false
@@ -63,13 +66,33 @@ outputs:
 runs:
   using: 'composite'
   steps:
+    - name: Determine lockfile path
+      if: (inputs.mode == 'full' || inputs.mode == 'build') && inputs.package-manager != 'none'
+      id: lockfile
+      shell: bash
+      working-directory: ${{ inputs.working-directory }}
+      run: |
+        if [ "${{ inputs.package-manager }}" == "pnpm" ]; then
+          echo "path=${{ inputs.working-directory }}/pnpm-lock.yaml" >> $GITHUB_OUTPUT
+        elif [ "${{ inputs.package-manager }}" == "yarn" ]; then
+          echo "path=${{ inputs.working-directory }}/yarn.lock" >> $GITHUB_OUTPUT
+        else
+          echo "path=${{ inputs.working-directory }}/package-lock.json" >> $GITHUB_OUTPUT
+        fi
+
     - name: Setup Node.js
       if: inputs.mode == 'full' || inputs.mode == 'build'
       uses: actions/setup-node@v4
       with:
         node-version: ${{ inputs.node-version }}
-        cache: 'npm'
-        cache-dependency-path: ${{ inputs.working-directory }}/package-lock.json
+        cache: ${{ inputs.package-manager != 'none' && inputs.package-manager || '' }}
+        cache-dependency-path: ${{ steps.lockfile.outputs.path }}
+
+    - name: Setup pnpm
+      if: (inputs.mode == 'full' || inputs.mode == 'build') && inputs.package-manager == 'pnpm'
+      uses: pnpm/action-setup@v4
+      with:
+        version: latest
 
     - name: Install dependencies
       if: inputs.mode == 'full' || inputs.mode == 'build'
